--- a/package.json
+++ b/package.json
@@ -6,21 +6,31 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tauri": "tauri"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@minoru/react-dnd-treeview": "^3.4.4",
+    "@tauri-apps/api": "^2.1.1",
+    "@tauri-apps/plugin-fs": "^2.0.2",
+    "fs-extra": "^11.2.0",
+    "next": "15.0.3",
+    "react": "^18.0.2",
+    "react-dnd": "^16.0.1",
+    "react-dom": "^18.0.2",
+    "react-icons": "^5.3.0",
+    "react-quill-new": "^3.3.3",
+    "react-sidebar": "^3.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-sidebar": "^3.0.4",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5"
   }
 }
