--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.0.2",
     "react-icons": "^5.3.0",
     "react-quill-new": "^3.3.3",
-    "react-sidebar": "^3.0.2"
+    "react-sidebar": "^3.0.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
