--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.3.0",
     "react-quill-new": "^3.3.3",
     "react-sidebar": "^3.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
