--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.0.2",
+    "react-hook-form": "^7.54.1",
     "react-icons": "^5.3.0",
     "react-quill-new": "^3.3.3",
     "react-sidebar": "^3.0.2",
