--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@minoru/react-dnd-treeview": "^3.4.4",
     "@tauri-apps/api": "^2.1.1",
     "@tauri-apps/plugin-fs": "^2.0.2",
+    "diff": "^7.0.0",
     "fs-extra": "^11.2.0",
     "next": "15.0.3",
+    "openai": "^4.77.0",
     "react": "^18.0.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -27,6 +29,7 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@types/diff": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.10",
