--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-dom": "^18.0.2",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-quill-new": "^3.3.3",
     "react-router-dom": "^6.27.0",
+    "rehype-sanitize": "^6.0.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^11.0.3"
   },
