--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "test": "jest --config jest.config.cjs"
   },
   "dependencies": {
     "@minoru/react-dnd-treeview": "^3.4.4",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/diff": "^6.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.17.10",
     "@types/path-browserify": "^1.0.3",
     "@types/react": "^18.0.15",
@@ -42,8 +44,10 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.3.1",
     "typescript": "^5"
   }
 }
