--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,7 +14,7 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["react", "react-dom", "@types/node"], // Include Tauri types
+    "types": ["react", "react-dom", "@types/node", "jest"], // Include Tauri types
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
 
