first pass at implementing exports

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,3 +26,7 @@ tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-fs = "2.0"
 reqwest = "0.12.9"
 dotenv = "0.15.0"
+genpdf = "0.2"
+scraper = "0.21"
+ego-tree = "0.9"
+chrono = "0.4"
